--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.14",
+    "classnames": "^2.5.1",
+    "lqip-modern": "^2.0.0",
+    "next": "14.1.4",
+    "notion-client": "^6.16.0",
+    "notion-compat": "^6.16.0",
+    "notion-types": "^6.16.0",
+    "notion-utils": "^6.16.0",
+    "p-map": "^7.0.1",
+    "p-memoize": "^7.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-notion-x": "^6.16.0",
+    "react-tweet-embed": "^2.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "eslint-config-next": "14.1.4",
+    "typescript": "^5"
   }
 }
